.provarCaches/00D410000011HE0EAM/objects/rstk__sorma__c.object
<CustomObject>
    <description>sorma__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sorma_sormh__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(ROUND( rstk__sorma_line__c, 0 ))</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sorma_sormh__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(ROUND( rstk__sorma_line__c, 0 ))</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__sorma_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__sorma_soprod__r.rstk__soprod_prod__c + &apos; &apos; +  rstk__sorma_project__r.rstk__pjproj_proj__c + &apos; &apos; +  rstk__sorma_reason__r.rstk__soreason_desc__c + &apos; &apos; +  rstk__sorma_soline__r.rstk__soline_sohdr__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_action__c</fullName>
        <inlineHelpText>Valid actions are:  Repair, Replace, and Issue Credit</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Issue Credit</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sorma_address1__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the street address  (Line 1)</inlineHelpText>
        <label>Override Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_address2__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the Suite #, Apartment #, etc. (Line 2)</inlineHelpText>
        <label>Override Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_address3__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the street address  (Line 3)</inlineHelpText>
        <label>Override Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_adjacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Adjustment Account associated with this RMA.</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>RMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_advpackage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use Advanced Packaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Case number, if created by a case.</inlineHelpText>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_city__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the city</inlineHelpText>
        <label>Override City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that RMA is closed.</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_condition__c</fullName>
        <inlineHelpText>Comments on condition when received.</inlineHelpText>
        <label>Condition Received</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_conmethod__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the contact method</inlineHelpText>
        <label>Override Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Text to Email</fullName>
                </value>
                <value>
                    <fullName>Text to Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sorma_consigned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates Consigned Inventory, which when received will come in at no cost.</inlineHelpText>
        <label>Consigned Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_contact__c</fullName>
        <inlineHelpText>The contact name for this RMA detail record</inlineHelpText>
        <label>Override Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_country__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the country</inlineHelpText>
        <label>Override Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_creditauth__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that a Credit has been authorized for this RMA.</inlineHelpText>
        <label>Credit Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_custno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer for this RMA.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_date__c</fullName>
        <inlineHelpText>Date RMA issued.</inlineHelpText>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_daterecvd__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_dracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional Sub Ledger Account that would be debited upon an RMA Receipt.  If left blank, will use the RMA Adjustment Account defined on the SO Control record for the given Sales Division.</inlineHelpText>
        <label>RMA Receipt Debit Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>RMA Detail (RMA Receipt Debit Account)</relationshipLabel>
        <relationshipName>dracctsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_email__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the email address</inlineHelpText>
        <label>Override Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_extcomment__c</fullName>
        <inlineHelpText>Comments that can be viewed when printing the RMA</inlineHelpText>
        <label>External Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_fax__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides  the fax number</inlineHelpText>
        <label>Override Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_fromcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates RMA was created from a case.</inlineHelpText>
        <label>Created From Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_fsoackd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Print Detail</label>
        <referenceTo>rstk__fsoackd__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_insplocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inspection Location ID to which an RMA is received or transferred to when receiving or transferring to Inspection.</inlineHelpText>
        <label>Inspection Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>RMA Detail (Inspection Location ID)</relationshipLabel>
        <relationshipName>insplocidsormsa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_insplocnum__c</fullName>
        <inlineHelpText>Inspection Location Number to which an RMA is received or transferred to when receiving or transferring to Inspection.</inlineHelpText>
        <label>Inspection Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_inspord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inspection Order</label>
        <referenceTo>rstk__inspord__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_insptempl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Order Template</label>
        <referenceTo>rstk__insptempl__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_installaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When RMA is created for a Product that shipped on a Sales Order, this is the Installation Address defined for the Installation Customer on the Sales Order that the Product being returned as shipped against.</inlineHelpText>
        <label>Installation Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>RMA Detail (Installation Address)</relationshipLabel>
        <relationshipName>installaddrsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_installcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When RMA is created for a Product that shipped on a Sales Order, this is the Installation Customer defined on the Sales Order that the Product being returned as shipped against.</inlineHelpText>
        <label>Installation Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>RMA Detail (Installation Customer)</relationshipLabel>
        <relationshipName>installcustsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_intcomment__c</fullName>
        <inlineHelpText>Internal-only Comments</inlineHelpText>
        <label>Internal Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inventory Division associated with this return.</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>RMA Detail (Inventory Division)</relationshipLabel>
        <relationshipName>Return_Material_Authorization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_invlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inventory Location ID to which an RMA is received or transferred to when receiving or transferring to Inventory.</inlineHelpText>
        <label>Inventory Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>invlocidsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_invlocnum__c</fullName>
        <inlineHelpText>Inventory Location Number to which an RMA is received or transferred to when receiving or transferring to Inventory.</inlineHelpText>
        <label>Inventory Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_isocountry__c</fullName>
        <description>sorma_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sorma_line__c</fullName>
        <inlineHelpText>RMA line number for this RMA Detail</inlineHelpText>
        <label>Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_name__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the ship-to name</inlineHelpText>
        <label>Override Ship to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_oshiptoaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When checked, all address and related fields can be overwritten for this RMA only.</inlineHelpText>
        <label>Ship To Address Override</label>
        <referenceTo>rstk__sormaaddr__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>oshiptoaddrsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_overcmprice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Setting this indicator will use the Override price on Credit Memo Lines created from this RMA Line</inlineHelpText>
        <label>Use Override Price on Credit Memo Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_ovrshipto__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this allows the user to override all Ship-To Address fields</inlineHelpText>
        <label>Ship To Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_phone__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the phone number</inlineHelpText>
        <label>Override Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_preshipok__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that replacement can occur before product is returned.</inlineHelpText>
        <label>Advance Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project associated with this RMA.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Allocated</inlineHelpText>
        <label>Qty Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyauth__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Authorized</inlineHelpText>
        <label>Qty Authorized</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyinsp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity in Inspection on this RMA.</inlineHelpText>
        <label>Qty in Inspection</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyrec__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Received against this RMA.</inlineHelpText>
        <label>Qty Received</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Scrapped against this RMA.</inlineHelpText>
        <label>Qty Scrapped</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_qtyship__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Shipped</inlineHelpText>
        <label>Qty Shipped</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Must be a valid Reason Code.</inlineHelpText>
        <label>Reason for Return</label>
        <referenceTo>rstk__soreason__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_released__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked. indicates that this RMA Detail record is released and can now be processed.</inlineHelpText>
        <label>Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_resp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Manufacturing User responsible for this RMA.</inlineHelpText>
        <label>Responsible User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_returnonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, a Replacement Sales Order cannot be created from RMA Detail.  Note that field is disabled if a Replacement SO Line has already been created for this RMA Detail record.</inlineHelpText>
        <label>Return Only (No Replacement)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_returnprice__c</fullName>
        <inlineHelpText>When the &apos;Replacement Product&apos; field is used, when a price is set here, this will be the Unit Price used when creating a Replacement Sales Order from this RMA Detail.  If not set, the pricing library will be called and the price will be derived as usual.</inlineHelpText>
        <label>Override Price for Replacement Sales Ord</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_returnprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, when a Replacement Sales Order is created from this RMA Detail, the SO Line Product will be the Rootstock Product set here rather than the Product being returned.</inlineHelpText>
        <label>Replacement Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>RMA Detail (Replacement Product)</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_rmano__c</fullName>
        <inlineHelpText>RMA Number that this RMA Detail record is tied to.</inlineHelpText>
        <label>RMA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_scraplocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Location ID to which an RMA is transferred  when the RMA is scrapped.  Location type must be Non-nettable.</inlineHelpText>
        <label>Scrap Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>RMA Detail (Scrap Location ID)</relationshipLabel>
        <relationshipName>scraplocidsormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_scraplocnum__c</fullName>
        <inlineHelpText>Location Number to which an RMA is transferred to when RMA is scrapped.</inlineHelpText>
        <label>Scrap Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_shipcost__c</fullName>
        <inlineHelpText>Shipping costs</inlineHelpText>
        <label>Shipping Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_shipsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies Site from which RMA replacement will be shipped.</inlineHelpText>
        <label>Ship From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Detail (Ship From Site)</relationshipLabel>
        <relationshipName>shipsitesormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_shiptomethod__c</fullName>
        <inlineHelpText>This is the Ship-To Address Method</inlineHelpText>
        <label>Ship To Address Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Header</fullName>
                </value>
                <value>
                    <fullName>Use Customer Address</fullName>
                </value>
                <value>
                    <fullName>Line Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sorma_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies Site in which RMA will be received.</inlineHelpText>
        <label>Receive To Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_socaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ship To Address for the customer.</inlineHelpText>
        <label>Customer Ship To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated Credit Memo number.</inlineHelpText>
        <label>Credit Memo Number</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>RMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Order Line associated with the RMA.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product being returned on this RMA Detail record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>Return_Material_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_sormastat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User-defined RMA statuses established in User Status under Sales Setup menu.</inlineHelpText>
        <label>Designated RMA Status</label>
        <referenceTo>rstk__sormastat__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_sormh__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Return Material Authorization number.</inlineHelpText>
        <label>RMA Number</label>
        <referenceTo>rstk__sormh__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_soship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The shipper from which this RMA is being returned</inlineHelpText>
        <label>Shipper Number</label>
        <referenceTo>rstk__soship__c</referenceTo>
        <relationshipName>RMA_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_soshipline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated Shipper Line number.</inlineHelpText>
        <label>Shipper Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_state__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the state</inlineHelpText>
        <label>Override State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_syorg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Organizational Department associated with this RMA.</inlineHelpText>
        <label>Organizational Department</label>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_uom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>sormas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_uomcf__c</fullName>
        <label>Sales/Inv UOM Conv Factor</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_usegenerickit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that the item being returned is not a Product that was shipped.</inlineHelpText>
        <label>Process Non-Product Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WBS Account</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>RMA Detail</relationshipLabel>
        <relationshipName>RMA_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_zerormarcpt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the RMA Receipt transaction will be costed at $0, regardless of the actual cost of the item being received.</inlineHelpText>
        <label>Do RMA Receipt at Zero Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sorma_zip__c</fullName>
        <inlineHelpText>When Override Ship-To is checked, this overrides the zip code</inlineHelpText>
        <label>Override Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Detail</label>
    <listViews>
        <fullName>rstk__RS_RMA_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__sorma_sormh__c</columns>
        <columns>rstk__sorma_custno__c</columns>
        <columns>rstk__sorma_div__c</columns>
        <columns>rstk__sorma_rmano__c</columns>
        <columns>rstk__sorma_soprod__c</columns>
        <columns>rstk__sorma_dimvals__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sorma_qtyauth__c</columns>
        <columns>rstk__sorma_qtyrec__c</columns>
        <columns>rstk__sorma_qtyinsp__c</columns>
        <columns>rstk__sorma_qtyship__c</columns>
        <columns>rstk__sorma_closed__c</columns>
        <columns>rstk__sorma_released__c</columns>
        <columns>rstk__sorma_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sorma_dimvals__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>RMA Detail</label>
        <language>en_US</language>
    </listViews>
</CustomObject>